--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arboles binarios :: Parser Expresiones</title>
     <script src="./js/arbol.js"></script>
+    <script src="./js/nodo.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/utils.js"></script>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
